corrects z-index issue with typeahead search box

--- a/app/assets/stylesheets/geoblacklight/modules/twitter-typeahead.scss
+++ b/app/assets/stylesheets/geoblacklight/modules/twitter-typeahead.scss
@@ -1,4 +1,7 @@
 .twitter-typeahead {
+  float: left;
+  width: 100%;
+  z-index: 1001;
 
   .tt-input.form-control {
     width: 100%;
